Finished the leaderboard
Template for working leaderboard that is connected to a database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,5 +38,7 @@
         <br>
         <a href="/schedule/show">Show Schedule</a>
     <% } %>
+    <br>
+    <a href="/leaderboard">Show Leaderboard</a>
 
 
